			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

15-May-2002
~~~~~~~~~~~
Wrap long icon names onto multiple lines.

14-May-2002
~~~~~~~~~~~
Code tidying (Bernard Jungen).
Bugfix: Ctrl-clicking on icons can unselect, not just select.

13-May-2002
~~~~~~~~~~~
Bugfix: Short form of '--client-id' option didn't work (reported by Julio
	Hugo Toloza).

12-May-2002
~~~~~~~~~~~
Allow hidden subdirectories in <Choices>/SendTo which have their contents
included only for certain MIME types (Geoff Youngs).
When changing directory, remove any trailing /s from the path.
Make sure panels never get lowered under the pinboard.
Iconified windows are now displayed on the pinboard, not floating over
everything else.
Bugfix: Using a savebox when the pathname contained multi-byte characters
	caused the initial selected region to be positioned incorrectly.

10-May-2002
~~~~~~~~~~~
Initial support for showing iconified windows.

09-May-2002
~~~~~~~~~~~
Changed the way pinboard icons are implemented.
Changed the way backdrop applications set the backdrop.
Always use button-3 for the pinboard menu, as the window manager menu must
be on button-2 (spotted by Geoff Youngs).

08-May-2002
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Middle button clicks on the pinboard are passed to the window manager.
Many improvements to the pinboard:
- Changing font updates the pinboard icons.
- Button-2 clicks are passed to window manager.
- Drop highlight doesn't flicker.

07-May-2002
~~~~~~~~~~~
Improved highlighting of icons (Andras Mohari).

06-May-2002
~~~~~~~~~~~
The pinboard is now a screen-sized window. Faster and better looking.
Setting the backdrop is now done from the filer.

03-May-2002
~~~~~~~~~~~
The Link box allows an existing symlink to be replaced, instead of
complaining that the destination already exists (suggested by Arnaud Calvo).
Bugfix: When editing a panel icon, the tooltip didn't update until the next
	restart (Olli Helenius).

02-May-2002
~~~~~~~~~~~