@@ -113,6 +113,7 @@ See the manual for information about using the pinboard.</label>
     </frame>
     <frame label='Pinboard behaviour'>
       <toggle name='bind_single_pinboard' label='Single-click to open'>Clicking on an item opens it with this on. Hold down Control to select the item instead. If off, clicking once selects an item; double click to open things.</toggle>
+      <toggle name='pinboard_forward_button_3' label='Pass button-3 clicks to window manager'>Normally, clicking on the desktop background will open the pinboard menu. Turn this on to forward the event to your window manager instead. Clicks on icons will not be forwarded.</toggle>
       <toggle name='pinboard_clamp_icons' label='Keep icons within screen limits'>If this is set, pinboard icons are always kept completely within screen limits, including the label.</toggle>
       <hbox label='Icon grid step:'>
         <radio-group name='pinboard_grid_step'>
