@@ -5,6 +5,8 @@
 15-May-2002
 ~~~~~~~~~~~
 Wrap long icon names onto multiple lines.
+Options to forward button-3 clicks on the pinboard to the window manager
+(requested by Ryan Harris).
 
 14-May-2002
 ~~~~~~~~~~~
